-
Bug
-
Resolution: Fixed
-
Critical
-
Lustre 2.4.1
-
3
-
12387
1 oss just crashed with this bug. Look like it is a dup of LU-3071. Please update the status of the patch for LU-3071. We have crash dump for analysis.
<4>-----------[ cut here ]-----------^M
<2>kernel BUG at fs/jbd2/transaction.c:293!^M
[29]kdb> bt^M
Stack traceback for pid 12534^M
0xffff8815df038040 12534 2 1 29 R 0xffff8815df0386e0 *ll_ost_io03_069^M
sp ip Function (args)^M
0xffff881a76d3cfd8 0xffffffffa0c4c5ac [jbd2]jbd2_journal_start+0x10c (0xffff880e893fa000, 0x12)^M
kdb_bb: address 0x000000000000003a not recognised^M
Using old style backtrace, unreliable with no arguments^M
sp ip Function (args)^M
0xffff881a76d3cfd8 0xffffffffa0c4c5ac [jbd2]jbd2_journal_start+0x10c^M
0xffff881a76d3d048 0xffffffffa0d0d3d6 [ldiskfs]ldiskfs_journal_start_sb+0x56^M
0xffff881a76d3d068 0xffffffffa0d0d754 [ldiskfs]ldiskfs_dquot_drop+0x34^M
0xffff881a76d3d088 0xffffffff811dd982 vfs_dq_drop+0x52^M
0xffff881a76d3d098 0xffffffff81199873 clear_inode+0x93^M
0xffff881a76d3d0b8 0xffffffff81199960 dispose_list+0x40^M
0xffff881a76d3d0f8 0xffffffff81199cb4 shrink_icache_memory+0x274^M
0xffff881a76d3d158 0xffffffff8112e66a shrink_slab+0x12a^M
0xffff881a76d3d1b8 0xffffffff81130a47 do_try_to_free_pages+0x3f7^M
0xffff881a76d3d1c8 0xffffffff8111a68f zone_watermark_ok+0x1f^M
0xffff881a76d3d258 0xffffffff81130e32 try_to_free_pages+0x92^M
0xffff881a76d3d2f8 0xffffffff81128668 __alloc_pages_nodemask+0x478^M
0xffff881a76d3d438 0xffffffff81163302 kmem_getpages+0x62^M
0xffff881a76d3d468 0xffffffff81163f1a fallback_alloc+0x1ba^M
0xffff881a76d3d478 0xffffffff8116396f cache_grow+0x2cf^M
0xffff881a76d3d4e8 0xffffffff81163c99 ____cache_alloc_node+0x99^M
0xffff881a76d3d538 0xffffffffa048fb60 [libcfs]cfs_alloc+0x30^M
0xffff881a76d3d548 0xffffffff81164a69 __kmalloc+0x189^M
0xffff881a76d3d598 0xffffffffa048fb60 [libcfs]cfs_alloc+0x30^M
0xffff881a76d3d5c8 0xffffffffa04974fe [libcfs]cfs_get_environ+0x5e^M
0xffff881a76d3d5e8 0xffffffffa07b126f [ptlrpc]null_alloc_reqbuf+0x1cf^M
0xffff881a76d3d628 0xffffffffa0774e2c [ptlrpc]lustre_msg_add_version+0x6c^M
0xffff881a76d3d648 0xffffffffa07753c7 [ptlrpc]lustre_pack_request+0xb7^M
0xffff881a76d3d668 0xffffffffa07768d4 [ptlrpc]lustre_msg_set_timeout+0x74^M
0xffff881a76d3d6a8 0xffffffffa05a92b7 [obdclass]lustre_get_jobid+0x107^M
0xffff881a76d3d6d8 0xffffffffa0774d36 [ptlrpc]lustre_msg_set_jobid+0xb6^M
0xffff881a76d3d6f8 0xffffffffa079675d [ptlrpc]ptlrpcd_add_req+0x3d^M
0xffff881a76d3d708 0xffffffffa076238c [ptlrpc]ptlrpc_request_bufs_pack+0x5c^M
0xffff881a76d3d720 0xffffffffa0778e70 [ptlrpc]lustre_swab_quota_body^M
0xffff881a76d3d788 0xffffffffa0c77b8d [lquota]qsd_send_dqacq+0x1fd^M
0xffff881a76d3d7b8 0xffffffffa0c83bd0 [lquota]qsd_req_completion^M
0xffff881a76d3d7f8 0xffffffffa0c849a5 [lquota]qsd_adjust+0x425^M
0xffff881a76d3d818 0xffffffffa0c70515 [lquota]lquota_disk_read+0xe5^M
0xffff881a76d3d878 0xffffffffa0c86c41 [lquota]qsd_op_end+0x241^M
0xffff881a76d3d8c8 0xffffffffa0d56d17 [osd_ldiskfs]osd_trans_stop+0x67^M
0xffff881a76d3d8d8 0xffffffffa0d68b31 [osd_ldiskfs]osd_attr_set+0x181^M
0xffff881a76d3d938 0xffffffffa0e3e782 [ofd]ofd_trans_stop+0x22^M
0xffff881a76d3d948 0xffffffffa0e43ad6 [ofd]ofd_commitrw_write+0x406^M
0xffff881a76d3d9d8 0xffffffffa0e46abd [ofd]ofd_commitrw+0x5cd^M
0xffff881a76d3da28 0xffffffffa02c37e5 [lvfs]lprocfs_counter_add+0x125^M
0xffff881a76d3da68 0xffffffffa0dfb1d8 [ost]obd_commitrw+0x128^M
0xffff881a76d3dae8 0xffffffffa0e051d1 [ost]ost_brw_write+0xea1^M
0xffff881a76d3db38 0xffffffff812a3126 vsnprintf+0x336^M
0xffff881a76d3dc18 0xffffffffa07351c0 [ptlrpc]target_bulk_timeout^M
0xffff881a76d3dc78 0xffffffffa0e0b42b [ost]ost_handle+0x3ecb^M
0xffff881a76d3dd78 0xffffffffa049b114 [libcfs]libcfs_id2str+0x74^M
- is related to
-
LU-3071 kernel BUG at fs/jbd2/transaction.c:293 (jbd2_journal_start)
-
- Resolved
-